# EnclosingCoordinatesSolution

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
data/: points.txt
src/: circle.cpp  main.cpp  shape.cpp  square.cpp
src/include/: circle.h  shape.h  square.h
test/circle/: circle.test.cpp
test/square/: square.test.cpp
